
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int DSTATUS ;
typedef size_t BYTE ;


 int STA_NOINIT ;
 int ** driveHandle ;
 size_t driveHandleCount ;

DSTATUS disk_status(
    BYTE pdrv
    )
{
    if (pdrv < driveHandleCount)
    {
        if (driveHandle[pdrv] != ((void*)0))
            return 0;
    }
    return STA_NOINIT;
}
